--- a/src/components/memberFames/member/member.scss
+++ b/src/components/memberFames/member/member.scss
@@ -277,22 +277,26 @@
                         margin-left: 20px;
                     }
 
-                    .radioForm {
+                    .radioGroup {
                         display: flex;
                         align-items: center;
-                        justify-content: center;
-                        border: 1px solid #999999;
-                        border-radius: 8px;
-                        padding-left: 10px;
-                        color: #999999;
+                        justify-content: space-between;
+                        width: 200px;
+                        border: #999999 1px solid;
+                        filter: grayscale(1);
+                        border-radius: 6px;
+                        padding: 3px 10px;
+                        padding-top: 7px;
+                        margin-left: 20px;
                         font-size: 12px;
-                        font-family: "Inter", sans-serif;
-                        font-optical-sizing: auto;
+                        color: #999999;
                         font-weight: 400;
-                        font-style: normal;
-                        font-variation-settings:"slnt" 0;
-                        height: 28px;
                         margin-bottom: 10px;
+            
+                        .form-check-input {
+                            cursor: pointer;
+                        }
+            
                     }
 
                     p {
