--- a/src/components/pushNotification/pushNotification.scss
+++ b/src/components/pushNotification/pushNotification.scss
@@ -13,6 +13,14 @@
         padding-right: 0;
     }
 
+    .radioGroup {
+        filter: grayscale(1);
+
+        input {
+            cursor: pointer;
+        }
+    }
+
     .bigContainer {
         display: flex;
         align-items: center;
@@ -280,6 +288,10 @@
                                 padding: 2px 5px;
                                 border-radius: 5px;
                                 margin-top: 7px;
+
+                                @include mobile {
+                                    width: 90%;
+                                }
                             }
                         }
 
@@ -294,10 +306,14 @@
                                 padding-top: 5px;
 
                                 @include miniDesktop {
-                                    width: 90%;
+                                    width: 80%;
+                                }
+                                @include tablet {
+                                    width: 75%;
                                 }
                                 @include mini {
                                     width: 100%;
+                                    height: 115px;
                                 }
 
 
@@ -340,7 +356,7 @@
                                         font-weight: 400;
 
                                         @include mini {
-                                            padding: 2px 10px;
+                                            font-size: 11px;
                                         }
                                     }
 
@@ -350,7 +366,7 @@
                                         padding: 10px;
 
                                         @include mini {
-                                            padding: 8px;
+                                            font-size: 30px;
                                         }
                                     }
                                 }
@@ -385,7 +401,13 @@
                                     margin-bottom: 20px;
 
                                     @include mini {
-                                        width: 230px;
+                                        width: 210px;
+                                    }
+
+                                    p {
+                                        @include mini {
+                                            font-size: 10.5px;
+                                        }
                                     }
 
                                     button {
