--- a/src/components/EditApp/editApp.scss
+++ b/src/components/EditApp/editApp.scss
@@ -22,7 +22,7 @@
         justify-content: space-between;
         background-color: #f2f2f2;
         width: 89%;
-        height: 100vh;
+        // height: 100vh;
         margin-left: 0;
         margin-right: 0;
 
@@ -49,6 +49,7 @@
                 padding-left: 10px;
             }
             @include tablet {
+                width: 90vw;
                 padding-left: 0;
             }
             
@@ -76,6 +77,11 @@
                     display: flex;
                     flex-direction: row;
                 }
+                @include mini {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
 
                 #accessLogo {
                     width: 50px;
@@ -87,6 +93,10 @@
                     font-weight: 500;
                     font-size: 24px;
                     margin-top: 10px;
+
+                    @include mini {
+                        font-size: 21px;
+                    }
                 }
                 p {
                     font-weight: 400;
@@ -105,6 +115,10 @@
                         display: flex;
                         flex-direction: column;
                         gap: 5px;
+                    }
+                    @include mini {
+                        display: flex;
+                        align-items: flex-start;
                     }
 
                     button {
@@ -130,8 +144,13 @@
                             font-size: 10px;
                         }
                         @include mobile {
-                            width: 200px;
+                            width: 180px;
                             font-size: 11px;
+                        }
+                        @include mini {
+                            width: 160px;
+                            gap: 10px;
+                            // display: flex;
                         }
                         
 
@@ -222,7 +241,13 @@
                                 }
 
                                 @include mobile {
-                                    width: 60%;
+                                    width: 90%;
+                                }
+
+                                @include mini {
+                                    width: 65vw;
+                                    padding-left: 5px;
+                                
                                 }
                             }
                         }
@@ -238,6 +263,10 @@
                                 width: 60%;
                             }
 
+                            @include mobile {
+                                width: 90%;
+                            }
+
                             .rightLinkBox {
                                 border: #999999 1px solid;
                                 border-radius: 10px;
@@ -246,6 +275,11 @@
 
                                 @include tablet {
                                     width: 100%;
+                                }
+                                @include mini {
+                                    width: 65vw;
+                                    padding-left: 5px;
+                                
                                 }
                             }
                         }
@@ -346,7 +380,9 @@
                         justify-content: space-between;
 
                         @include mobile {
-                            width: 90%;
+                            width: 100%;
+                            display: flex;
+                            gap: 20px;
                         }
 
                         h6 {
