--- a/src/components/plan/plan.scss
+++ b/src/components/plan/plan.scss
@@ -176,6 +176,10 @@
                         width: 100%;
                         border-bottom: #CCCCCC 1px solid;
 
+                        @include mobile {
+                            padding-left: 30px;
+                        }
+
                         h1 {
                             font-weight: 500;
                             font-size: 36px;
@@ -190,11 +194,19 @@
                         width: 100%;
                         border-bottom: 1px solid #CCCCCC;
 
+                        @include mobile {
+                            gap: 20px;
+                        }
+
                         h6 {
                             font-weight: 400;
                             font-size: 12px;
                             color: #000000;
                             padding-left: 60px;
+
+                            @include mobile {
+                                padding-left: 30px;
+                            }
                         }
                         .pLicense {
                             font-weight: 300;
@@ -206,6 +218,11 @@
                             border: 1px solid #BDBDBD;
                             padding: 10px 15px 10px 15px;
                             margin-left: 60px;
+
+                            @include mobile {
+                                margin-left: 30px;
+                                width: 90%;
+                            }
                         }
 
                         .box {
@@ -218,7 +235,15 @@
                             padding: 5px 30px 10px 20px;
                             margin-bottom: 30px;
                             margin-left: 60px;
-                            // border-bottom: 1px solid #CCCCCC;
+
+                            @include mobile {
+                                margin-left: 30px;
+                                width: 90%;
+                                gap: 10px;
+                            }
+                            @include mini {
+                                padding-right: 15px;
+                            }
 
                             .boxTop {
                                 display: flex;
@@ -241,6 +266,10 @@
 
                                     &:hover {
                                         background-color: #000000db;
+                                    }
+
+                                    @include mini {
+                                        padding: 5px 15px;
                                     }
                                 }
                             }
