--- a/src/components/memberFames/member/member.scss
+++ b/src/components/memberFames/member/member.scss
@@ -193,7 +193,7 @@
         .content {
             background-color: #FFFFFF;
             border-radius: 11px;
-            height: 360px;
+            height: 370px;
             width: 500px;
             position: relative;
 
@@ -239,7 +239,7 @@
                         border-radius: 7px;
                         padding: 7px 10px;
                         color: #999999;
-                        font-size: 10px;
+                        font-size: 11px;
                         font-family: "Inter", sans-serif;
                         font-optical-sizing: auto;
                         font-weight: 400;
@@ -294,6 +294,7 @@
                         margin-bottom: 10px;
             
                         .form-check-input {
+                            margin-top: 5px;
                             cursor: pointer;
                         }
             
