--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,28 @@
 body{
   /* font-family:Graphik,Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji; */
 }
+main{
+  display:flex;
+  flex-direction:column;
+  min-height: 100vh!important;
+}
 
+body{
+  height:100%;
+  max-width: 1540px;
+  margin: 0 auto;
+}
+.navWidth{
+  width:26.5rem!important;
+}
+.desktopNav{
+  position:relative !important;
+  height:100%!important;
+}
+.iconInput{
+  padding:0.6rem 2.2rem!important;
+}
+   
 input[type=file]{
   visibility:hidden;
 }
