--- a/src/components/nativeNavigation/nativeNavigation.scss
+++ b/src/components/nativeNavigation/nativeNavigation.scss
@@ -114,10 +114,9 @@
                     }
         
                     i {
-                        transform: rotate(90deg);
                         font-size: 20px;
                         background-color: #ffffff;
-                        padding: 6px;
+                        padding: 4px 10px;
                         border-radius: 5px;
                         border: 1px solid #000000;
                     }
