--- a/src/components/plan/plan.scss
+++ b/src/components/plan/plan.scss
@@ -113,10 +113,9 @@
                     }
         
                     i {
-                        transform: rotate(90deg);
                         font-size: 20px;
                         background-color: #ffffff;
-                        padding: 6px;
+                        padding: 4px 10px;
                         border-radius: 5px;
                         border: 1px solid #000000;
                     }
@@ -165,6 +164,8 @@
 
                     @include mini {
                         width:85%;
+                        margin-right: 20px;
+                        
                     }
 
                     .header {
