--- a/src/components/memberFames/member/member.scss
+++ b/src/components/memberFames/member/member.scss
@@ -1,7 +1,7 @@
 @import "../../../responsive.scss";
 .member {
     background-color: #F2F2F2;
-    height: 100vh;
+    height: max-content;
     width: 100%;
 
     .body {
@@ -13,7 +13,7 @@
             display: flex;
             align-items: center;
             flex-direction: column;
-            height: 80vh;
+            height: max-content;
         }        
         
         .container {
@@ -32,9 +32,15 @@
                 margin: auto;
                 border-top-left-radius: 10px;
                 border-left: 0;
+                margin-top: 70px;
             }
             @include mobile {
                 padding-left: 10px;
+                width: 90vw;
+            }
+            @include mini {
+                width: 100vw;
+                padding-left: 0;
             }
             .up {
                 display: flex;
@@ -42,6 +48,10 @@
                 justify-content: space-between;
                 margin-bottom: 20px;
                 margin-top: 30px;
+
+                @include mini {
+                    padding-left: 5px;
+                }
 
                 input[type=text] {
                     width: 350px;
@@ -109,6 +119,8 @@
             }
 
             .table {
+                width: 100%;
+                border-collapse: collapse;
                 
                 thead {
                     border-bottom: none;
@@ -122,15 +134,42 @@
                     font-weight: 400;
                     font-style: normal;
                     font-variation-settings:"slnt" 0;
+                    padding: 8px;
                 }
 
+                @include miniDesktop {
+                    .user-col {
+                        width: 150px;
+                    }
+                    .email-col {
+                        width: 150px;
+                    }
+                    .role-col {
+                        width: 150px;
+                    }
+                    .access-col {
+                        width: 150px;
+                    }
+                }
+
+                @include mobile {
+                    .user-col {
+                        width: 100px;
+                    }
+                    .mail {
+                        width: 100px;
+                        padding-right: 0;
+                        padding-left: 0;
+                    }
+                }
+                
                 tr {
                     border: 10px solid white;
                     
                     td {
                         background-color: #F2F2F2;
                         padding-top: 20px;
-
+                        
                         @include tablet {
                             font-size: 13px;
                         }
