--- a/src/components/myAccount/myAccount.scss
+++ b/src/components/myAccount/myAccount.scss
@@ -1,7 +1,8 @@
 @import "../../responsive.scss";
 .myAccount {
     background-color: #F2F2F2;
-    height: 100vh;
+    height: max-content;
+    padding-bottom: 10px;
     .container {
         width: 550px;
         height: 467px;
@@ -11,8 +12,9 @@
         margin-top: 50px;
         background-color: #ffffff;
         border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
         border-top-right-radius: 10px;
-        margin-bottom: 10px;
+        border-bottom-right-radius: 10px;
         padding-top: 30px;
 
         @include tablet {
@@ -76,6 +78,7 @@
                 h6 {
                     background-color: #CCCCCC;
                     border: none;
+                    overflow: hidden;
                 }
             }
         }
